--- a/nodejs-server-server/package.json
+++ b/nodejs-server-server/package.json
@@ -12,5 +12,12 @@
     "connect": "^3.2.0",
     "js-yaml": "^3.3.0",
     "swagger-tools": "0.10.1"
+  },
+  "devDependencies": {
+    "mocha": "^2.5.3",
+    "supertest": "^1.2.0"
+  },
+  "scripts": {
+	"test": "mocha --reporter spec"
   }
 }
