--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "main": "app.js",
   "dependencies": {
     "express": "^4.12.3",
+    "json-to-html": "^0.1.2",
     "swagger-express-mw": "^0.1.0"
   },
   "devDependencies": {
@@ -18,6 +19,6 @@
   "scripts": {
     "start": "node app.js",
     "test": "swagger project test",
-	"cover": "istanbul cover _mocha 'test/**/*.js'"
+    "cover": "istanbul cover _mocha 'test/**/*.js'"
   }
 }
